2000-02-13  Manuel Guesdon <mguesdon@sbuilders.com>

	* GSWStatisticsStore.m: added comment
	* GSWSubmitButton.m: added log and assert
	* GSWImageButton.m: added log and assert
	* GSWHyperlink.m: added log and assert
	* GSWHTMLStaticElement.m: added log and assert
	* GSWForm.m: added log and assert
	* GSWElement.m: added log and assert
	* GSWConditional.m: added log and assert
	* GSWComponentReference.m: added log and assert
	* GSWComponent.m: added log and assert
	* GSWElement.m: added log and assert
	* GSWElement.h: added debug ivar
	* GSWTextField.m: added log and assert
	* GSWInput.m: added log and assert
	* GSWelementIDString.h/.m: added
		-parentElementIDString
		-copyWithZone:
		-mutableCopyWithZone:


2000-02-12  Manuel Guesdon <mguesdon@sbuilders.com>

	* GSWApplication.m: move DESTROY(appAutoreleasePool); 
		at the end of GSWApplicationMain to avoid bundle release.

2000-02-12  Manuel Guesdon <mguesdon@sbuilders.com>

	* GSWForm.m: Added senderId test in -invokeActionForRequest:inContext:
		and -takeValuesFromRequest:inContext:
	* GSWComponentReference.m: Added senderId test in 
		-invokeActionForRequest:inContext:
		and -takeValuesFromRequest:inContext:

2000-02-05  Mirko Viviani <mirko.viviani@rccr.cremona.it>

	* GSWeb/Application.m: in GSWApplicationMain() created an autorelease pool,
	  released GSWApp when it exits from the run loop
	* Doc/GNUstepWeb-HOWTO: updated

2000-01-29  Manuel Guesdon <mguesdon@sbuilders.com>
	
	* GSWeb/GSWConfig.h: changed GSWOPTVALUE_FrameworksBaseURL to
		@"/GSW/Frameworks"
	
2000-01-27  Manuel Guesdon <mguesdon@sbuilders.com>
	
	* GSWeb/GSWApplication.m removed #include <NGReflection/common.h>
	* GSWeb/GSWeb.h: removed #include <gnustep/base/...>
	
2000-01-23  Manuel Guesdon <mguesdon@sbuilders.com>

	* Added Mirko Viviani's GNUstepWeb-HOWTO
	
2000-01-23  Manuel Guesdon <mguesdon@sbuilders.com>

        * GSWeb.framework/html.g: modified Include 
        * GSWeb.framework/PageDef.g: modified Include 