@@ -308,8 +308,8 @@ id value__Key = @"value";
 id action__Key = @"action";
 id name__Key = @"name";
 id disabled__Key = @"disabled";
-id dateFormat__Key = @"dateFormat";
-id numberFormat__Key = @"numberFormat";
+id dateFormat__Key = @"dateformat";
+id numberFormat__Key = @"numberformat";
 id href__Key = @"href";
 id queryDictionary__Key = @"queryDictionary";
 id multipleSubmit__Key = @"multipleSubmit";
